--- a/templates/survey.html
+++ b/templates/survey.html
@@ -104,6 +104,9 @@
 <body>
     <div class="container">
         <h1>แบบประเมินตนเอง ความเสี่ยงโรคปอด</h1>
+        <p style="color:#777; font-size:0.98rem; margin-top:-10px; margin-bottom:26px;">
+        แบบสอบถามนี้เป็นเพียงการคัดกรองขั้นต้น เพื่อใช้เป็นแนวทางในการให้บริการเท่านั้น กรุณากรอกแบบสอบถามให้ครบทุกข้อ เพื่อการประเมินที่ถูกต้อง
+        </p>
         <div class="progress-bar">
             <div class="progress"></div>
         </div>
